# threshscore

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api_reference.md  quickstart.md
docs/examples/: basic_usage.ipynb
docs/images/: generate_figures.py
src/threshscore/: __init__.py
src/threshscore/core/: __init__.py  metrics.py  scoring.py  thresholds.py
src/threshscore/gates/: __init__.py  arctan.py  base.py  linear_clip.py  registry.py  relu_clip.py  sigmoid.py
src/threshscore/plotting/: __init__.py  _style.py  confusion.py  gate.py  heatmap.py  pr.py  roc.py  threshold.py
src/threshscore/utils/: __init__.py  types.py  validation.py
tests/: test_gates.py  test_metrics.py  test_plotting.py  test_scoring.py  test_thresholds.py  test_validation.py
